Fix overlapping border of alias link

--- a/packages/sqlynx-app/src/view/connectors/hyper_grpc_connector_settings.module.css
+++ b/packages/sqlynx-app/src/view/connectors/hyper_grpc_connector_settings.module.css
@@ -75,9 +75,9 @@
 .attached_db_aliaslink {
     position: absolute;
     left: 20px;
-    top: 32px;
-    width: 16px;
-    height: 26px;
+    top: 33px;
+    width: 15px;
+    height: 24px;
 
     border-bottom: 1px solid var(--border_color_primary);
     border-left: 1px solid var(--border_color_primary);
